--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,17 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: How Technical Writers can contribute to Open Source Software projects
+email: monika.klimek02@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Technical writers can make valuable contributions to open source projects
+  by creating and maintaining documentation that helps developers and users
+  understand how to use the software. A well-written and comprehensive 
+  documentation can make a significant difference in the success of an open source project.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  mklimek1
 repository: mklimek1/my-docs
 
 # Build settings
