--- a/_config.yml
+++ b/_config.yml
@@ -32,12 +32,14 @@ github_username:  mklimek1
 repository: mklimek1/my-docs
 
 # Build settings
-theme: jekyll-theme-cayman
-remote_theme: pages-themes/cayman@v0.2.0
+theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs
 plugins:
   - jekyll-feed
   - jekyll-target-blank
-  - jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-remote-theme 
+  - jekyll-default-layout
+  # add this line to the plugins list if you already have one
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
