--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: How Technical Writers can contribute to Open Source Software projects
+title: Technical Writers' contribution to OSS
 email: monika.klimek02@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Technical writers can make valuable contributions to open source projects
